tests/src/frontend/typechecking/exhaustiveness/invalid/type_alias_parent_constraint_overlap.sk
base class F {
  children =
  | I(Int)
  | B(Bool)
}

class Test() {
  type Foo = F;

  fun bar(x: F): void {
    x match {
    | this::Foo _ -> void
    | I(Int _) -> void
    }
  }
}
fun test(): String {
  "Fail\n"
}
